{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 44,
  "lineage": "3c1c15e9-ec2c-1234-66e8-57ae8e5f9852",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "payalvpc1_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08bba90b9ae99a7b6",
            "public_dns": "ec2-13-232-26-189.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.26.189",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "payalbastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03831ab5ff3dd2f03",
            "arn": "arn:aws:ec2:ap-south-1:943159472880:instance/i-0789dda3446059d7c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0789dda3446059d7c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "payal286",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d5ec134adccf811f",
            "private_dns": "ip-192-168-0-95.ap-south-1.compute.internal",
            "private_ip": "192.168.0.95",
            "public_ip": "35.154.105.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05fef85bb2d90cda4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-054cecd54cf73c7b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c938dc89f326d3ed",
            "tags": {
              "Name": "payalbastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054cecd54cf73c7b6"
            ]
          },
          "dependencies": [
            "aws_security_group.payalbastion",
            "aws_subnet.payalvpc1_subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "payalsqlsecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03831ab5ff3dd2f03",
            "arn": "arn:aws:ec2:ap-south-1:943159472880:instance/i-026a14414811b490c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026a14414811b490c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "payal286",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b6752bb69a003a1",
            "private_dns": "ip-192-168-1-20.ap-south-1.compute.internal",
            "private_ip": "192.168.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07b0dd93eff522800",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0081b770ae2595239",
              "sg-0f61b7173a747d039"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e43e50a3f268f871",
            "tags": {
              "Name": "payalsqlsecure"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0081b770ae2595239",
              "sg-0f61b7173a747d039"
            ]
          },
          "dependencies": [
            "aws_security_group.payalsql",
            "aws_security_group.payalsqlallow",
            "aws_subnet.payalvpc1_subnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "payalwordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03831ab5ff3dd2f03",
            "arn": "arn:aws:ec2:ap-south-1:943159472880:instance/i-004b5309caf032f2d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004b5309caf032f2d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "payal286",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0778b6ead6da33901",
            "private_dns": "ip-192-168-0-235.ap-south-1.compute.internal",
            "private_ip": "192.168.0.235",
            "public_ip": "13.233.196.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ca6b28504fd29d41",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a92eb394cb92abc6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c938dc89f326d3ed",
            "tags": {
              "Name": "payalwordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a92eb394cb92abc6"
            ]
          },
          "dependencies": [
            "aws_security_group.payalweb",
            "aws_subnet.payalvpc1_subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "payalvpc1_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:internet-gateway/igw-06a6f1426005dc24e",
            "id": "igw-06a6f1426005dc24e",
            "owner_id": "943159472880",
            "tags": {
              "Name": "payalvpc1_internet_gateway"
            },
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "payalvpc1_nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bba90b9ae99a7b6",
            "id": "nat-0a89f0aa45943648c",
            "network_interface_id": "eni-0c2cb5055d33cf60c",
            "private_ip": "192.168.1.205",
            "public_ip": "13.232.26.189",
            "subnet_id": "subnet-0e43e50a3f268f871",
            "tags": {
              "Name": "payalvpc1_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.payalvpc1_eip",
            "aws_subnet.payalvpc1_subnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "payalvpc1_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05c41ab3f5cf45fd7",
            "owner_id": "943159472880",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a6f1426005dc24e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "payalvpc1_route_table"
            },
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_internet_gateway.payalvpc1_internet_gateway",
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "payalvpc1_route_table2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a0905b17a78ae0ea",
            "owner_id": "943159472880",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a89f0aa45943648c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_eip.payalvpc1_eip",
            "aws_nat_gateway.payalvpc1_nat_gateway",
            "aws_subnet.payalvpc1_subnet-1b",
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059602b55d387b240",
            "route_table_id": "rtb-05c41ab3f5cf45fd7",
            "subnet_id": "subnet-0c938dc89f326d3ed"
          },
          "dependencies": [
            "aws_route_table.payalvpc1_route_table",
            "aws_subnet.payalvpc1_subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "payalbastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-054cecd54cf73c7b6",
            "description": "Allow ssh for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054cecd54cf73c7b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "payalbastion",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "payalbastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "payalsql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-0081b770ae2595239",
            "description": "Allow sql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0081b770ae2595239",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a92eb394cb92abc6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "payalsql",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "payalsql"
            },
            "timeouts": null,
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_security_group.payalweb",
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "payalsqlallow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-0f61b7173a747d039",
            "description": "ssh allow to the payalsql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f61b7173a747d039",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054cecd54cf73c7b6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "payalsqlallow",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "payalsqlallow"
            },
            "timeouts": null,
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_security_group.payalbastion",
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "payalweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-0a92eb394cb92abc6",
            "description": "Allow ssh http and icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a92eb394cb92abc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP-IPv4",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "payalweb",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "payalweb"
            },
            "timeouts": null,
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "payalvpc1_subnet-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:subnet/subnet-0c938dc89f326d3ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0c938dc89f326d3ed",
            "map_public_ip_on_launch": true,
            "owner_id": "943159472880",
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "payalvpc1_subnet-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:subnet/subnet-0e43e50a3f268f871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0e43e50a3f268f871",
            "map_public_ip_on_launch": false,
            "owner_id": "943159472880",
            "vpc_id": "vpc-022b29093f21a15b9"
          },
          "dependencies": [
            "aws_vpc.payalvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "payalvpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:vpc/vpc-022b29093f21a15b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f66b8885030d091e",
            "default_route_table_id": "rtb-0f394368da0237ebe",
            "default_security_group_id": "sg-02486ccf6b32c8895",
            "dhcp_options_id": "dopt-0b8b40c07a03ecc7a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-022b29093f21a15b9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f394368da0237ebe",
            "owner_id": "943159472880",
            "tags": {
              "Name": "payalvpc1"
            }
          }
        }
      ]
    }
  ]
}